Fix avatar and align header for Comments

--- a/Client/src/components/Styles/Comment.scss
+++ b/Client/src/components/Styles/Comment.scss
@@ -28,7 +28,8 @@
   align-self: flex-start;
   height: 35px;
   width: 35px;
-  background-color: #bbb;
+  background-color: #242526;
+  box-shadow: 0px 3px 3px #02bff9, 0px 3px 3px #00fa11;
   border-radius: 50%;
   display: inline-block;
   margin-right: 15px;
